Fixed text overflowing recent changes box on small screens
Changed box height to min-height.

--- a/config/static-assets/static/regulations/css/scss/module/_custom.scss
+++ b/config/static-assets/static/regulations/css/scss/module/_custom.scss
@@ -3,7 +3,7 @@
 .recent-changes {
     margin-top: 30px;
     width: 100%;
-    height: 175px;
+    min-height: 175px;
 
     background: #F3F3F3;
     border-radius: 3px;
